small text alignment fix in `NoEquivalent` showcase component

--- a/showcase/app/styles/showcase-components/carbonization/comparison-grid.scss
+++ b/showcase/app/styles/showcase-components/carbonization/comparison-grid.scss
@@ -155,6 +155,7 @@
   code {
     font-size: 1em;
     line-height: 1em;
+    text-align: center;
   }
 
   span {
